# nutrition

./: README.md  meson.build
po/: POTFILES  com.github.anderrasovazquez.nutrition.pot  es.po
src/: Main.vala  meson.build
src/Controllers/: FacadeNutrition.vala  FoodSearcher.vala
src/Views/: FoodNutritionView.vala  MainWindow.vala  SearchResultView.vala  WelcomeView.vala
src/Widgets/: Header.vala  ListBoxRowWithData.vala
