sources = files(
    'Main.vala',

    'Views/FoodNutritionView.vala',
    'Views/SearchResultView.vala',
    'Views/MainWindow.vala',
    'Views/WelcomeView.vala',

    'Controllers/FoodSearcher.vala',
    'Controllers/FacadeNutrition.vala',
    
    'Widgets/Header.vala',
    'Widgets/ListBoxRowWithData.vala'
)